src/styles.css
* {
    font-family: 'Roboto';
}

app-root {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  padding: 80px 60px 20px 60px;
}

.card {
  background: #fff;
  border-radius: 2px;
  display: inline-block;
  height: 300px;
  margin-right: 20px;
  position: relative;
  width: 300px;
  float: left;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

hr {
    clear: both;
    border: 0;
}

.card {
    overflow: hidden;
    text-align: center;
}

.card-big {
    width: 600px;
    height: 600px;
    padding-top: 0;
}
.card-big video {
    background-color: black;
}

.card h2 {
    margin: 10px 0 0px 10px;
    vertical-align: top;
    text-align: left;
    height: 30px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.card-content {
    text-align: center;
    position: relative;
}

.card-image {
        width: 300px;
        height: 300px;
        object-fit: cover;
        display: block;
        margin: 0 auto;
}

.card_full-width {
    padding: 20px;
    height: 60px;
    float: none;
    display: block;
    width: inherit;
}

label span {
    display: block;
    height: 20px;
    font-size: 8pt;
}
label {
    display: block;
    text-align: left;
    float: left;
    margin-right: 20px;
}
button {
    margin-top: 20px;
}


.card-process-fill {
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;
    background-color: rgba(255,255,255,0.75);
}

.card-process-state {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    line-height: 300px;
    vertical-align: middle;
}

body {
    margin: 80px 60px 20px 60px;
    font-family: 'Source Sans Pro', sans-serif;
}

.header {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 48px;
    background-color: #00545E;
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    color: white;
}

.header-logo {
    line-height: 48px;
    margin-top: 8px;
    width: 80px;
    padding-left: 50px;
    margin-right: 10px;
    float: left;
}

.header-search {
    position: relative;
    float: left;
}

.header-search input {
    width: 600px;
    border-radius: 2px;
    border: 0;
    height: 36px;
    margin-top: 6px;

    font-size: 14pt;
    padding: 8px;
    background-color: rgba(255, 255,255, 0.5);
    position: relative;
}
.header-search button {
    display: flex;
    position: absolute;
    width: 60px;
    height: 36px;
    top: -4px;
    right: 0;
align-items: center;
justify-content: center;
    border-radius: 0;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
    background-color: rgba(0, 0, 0, 0.1);
    border-left: 1px solid rgba(255, 255, 255, 0.6);
}
.header-search button i {
    margin-top: -3px;
}

.header-controls {
    padding-right: 60px;
}

.header-control {
    margin: 2px;
    padding: 9px;
}

.header-control {
    float: right;
}

.header-control.active {
    background-color: #fff;
    color: rgb(32, 116, 147);
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);

}

.popup {

}

.popup-content.active {
    display: block;
}

.popup-content {
  display: none;
  background-color: #fff;
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
  position: absolute;
  right: 62px;
  top: 40px;
  width: 240px;
  color: rgba(0,0,0,0.5);
  z-index: 2;
}

.popup-content h4 {
    margin-left: 20px;
}
.popup-content input {
    width: 200px;
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 10px;
    display: block;
}
.popup-content button {
    width: 50%;
    float: left;
}

button {
    margin-top: 10px;
    padding: 10px 20px;
    background: rgb(32, 116, 147);
    text-transform: uppercase;
    border: 0;
    color: rgba(255, 255, 255, 0.8);
}

.popup-content button+button {
    border-left: 1px solid white;
}


a.header-control {
    color: white;
}

.label-with-icon {
    vertical-align: 6px;
    margin-right: 2px;
}

.full-background {
    position: absolute;
    z-index: 3;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    background: linear-gradient(to bottom, #00545e 0%,#00545e 50%,#ffffff 50%,#ffffff 100%);
    display: flex;
    justify-content: center;
    align-items: center;
}

.card-register {
    width: 360px;
    height: 444px;
    padding: 20px;
}

.card-register p {
    padding-left: 24px;
    text-align: left;
    font-weight: normal;
    color: rgba(0,0,0,.6);
}

.card-register label {
    width: 100%;
    float: none;
}

.card-register label span {
    font-size: 13pt;
    height: initial;
    margin-botom: 5px;
}
.card-register input:not([type='checkbox']) {
    width: 100%;
    font-size: 12pt;
    height: 20px;
}

.card-register input+input {
    margin-top: 10px;
}

.card-register label:first-child {
    margin-top: 0;
}
.card-register label {
    margin-top: 20px;
}

